--- a/ui.html
+++ b/ui.html
@@ -52,7 +52,7 @@
 <p><span class="badge badge-light">Vietnam Vietnam</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://faac-group.breezy.hr/p/7d094f35ebb301-parking-equipment-field-service-technician?source=GoogleJobs'>PARKING EQUIPMENT FIELD SERVICE TECHNICIAN-MA at FAAC ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://faac-group.breezy.hr/p/7d094f35ebb301-parking-equipment-field-service-technician?source=GoogleJobs'>PARKING EQUIPMENT FIELD SERVICE TECHNICIAN-MA at FAAC ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... We are seeking a Field Service Technician to join our HUB Parking Technology 
 team. You are an ideal candidate if you have previously worked on parking?...</p>
@@ -65,7 +65,7 @@ team. You are an ideal candidate if you have previously worked on parking?...</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://we-recruit.join.com/jobs/262092-internal-recruiter-sourcer-contract-11-m'>Job @ WE RECRUIT (Z?rich): Internal Recruiter/ Sou... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://we-recruit.join.com/jobs/262092-internal-recruiter-sourcer-contract-11-m'>Job @ WE RECRUIT (Z?rich): Internal Recruiter/ Sou... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... I agree with the JOIN Terms & Conditions and Data Privacy Policy. APPLY FOR 
 THIS JOB. Already applied? Check the status of your application. Share this job:.</p>
@@ -74,7 +74,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/3pillarglobal/9630ec28-31ca-4141-86bb-dc5eaa6f59d6'>3Pillar Global - Junior UI Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/3pillarglobal/9630ec28-31ca-4141-86bb-dc5eaa6f59d6'>3Pillar Global - Junior UI Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -156,7 +156,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://upwork-tac.workable.com/j/C6780EB11A'>Upwork - Jobs: UI Engineer - Apply online</a></h5> 
+<h5><a href='https://upwork-tac.workable.com/j/C6780EB11A'>Upwork - Jobs: UI Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -184,7 +184,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ah-recruitment.join.com/jobs/258391-general-counsel-m-w-d'>Job @ Althen Hensel - RECRUITMENT SOLUTIONS (L?den... | JOIN</a></h5> 
+<h5><a href='https://ah-recruitment.join.com/jobs/258391-general-counsel-m-w-d'>Job @ Althen Hensel - RECRUITMENT SOLUTIONS (L?den... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -196,7 +196,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<h5><a href='https://ah-recruitment.join.com/jobs/265963-system-architect-m-f-d-secure-element'>Job @ Althen Hensel - RECRUITMENT SOLUTIONS (Hambu... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ah-recruitment.join.com/jobs/265963-system-architect-m-f-d-secure-element'>Job @ Althen Hensel - RECRUITMENT SOLUTIONS (Hambu... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -240,7 +240,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qKr9VfwZ&k=Job&j=oF8G9fwm&__jvst=ER+-+Employee+Referral&__jvsd=sTJmRhwB&__jvsc=Twitter&bid=nLXvSKwk'>Nutanix Careers - Member of Technical Staff (UI-BEAM)</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qKr9VfwZ&k=Job&j=oF8G9fwm&__jvst=ER+-+Employee+Referral&__jvsd=sTJmRhwB&__jvsc=Twitter&bid=nLXvSKwk'>Nutanix Careers - Member of Technical Staff (UI-BEAM)</a></h5> 
 <p><span class="badge badge-light">Bangalore</span></p>
 <p>Posted on:: 2019-07-24</p>
 <hr/>
@@ -248,7 +248,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/DreamjobsES/743999684381986-ui-software-engineer-c-qt-qml-m-f-'>Dreamjobs.ES UI Software engineer - C++ Qt/QML (m/f) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/DreamjobsES/743999684381986-ui-software-engineer-c-qt-qml-m-f-'>Dreamjobs.ES UI Software engineer - C++ Qt/QML (m/f) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Madrid</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -300,7 +300,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://uiowa.referrals.selectminds.com/jobs/4301/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uiowa.referrals.selectminds.com/jobs/4301/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -340,7 +340,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/McDonaldsCanada/743999692205819-prepose-a-l-entretien-maintenance-de-nuit'>McDonald's Restaurants PR?POS? ? L'ENTRETIEN / MAINTENANCE DE NUIT | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/McDonaldsCanada/743999692205819-prepose-a-l-entretien-maintenance-de-nuit'>McDonald's Restaurants PR?POS? ? L'ENTRETIEN / MAINTENANCE DE NUIT | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -378,7 +378,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light">Wroclaw</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/McDonaldsCanada/743999692168043-caissier-iere-et-cuisinier-iere-t-plein'>McDonald's Restaurants CAISSIER/I?RE ET CUISINIER/I?RE ? T. PLEIN | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/McDonaldsCanada/743999692168043-caissier-iere-et-cuisinier-iere-t-plein'>McDonald's Restaurants CAISSIER/I?RE ET CUISINIER/I?RE ? T. PLEIN | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
