--- a/data-analyst.html
+++ b/data-analyst.html
@@ -55,7 +55,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=oyrAafwt&__jvst=Employee+Referral&__jvsd=s8eovhw1&__jvsc=Twitter&bid=n0QNUKwM'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=oyrAafwt&__jvst=Employee+Referral&__jvsd=s8eovhw1&__jvsc=Twitter&bid=n0QNUKwM'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-26</p>
 <hr/>
@@ -83,7 +83,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999692244858-senior-analyst-data-and-analysis'>Publicis Groupe Senior Analyst, Data and Analysis | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999692244858-senior-analyst-data-and-analysis'>Publicis Groupe Senior Analyst, Data and Analysis | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -127,13 +127,13 @@ American?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
-<h5><a href='https://titikpintar.recruitee.com/o/growth-hacker-data-analyst'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://titikpintar.recruitee.com/o/growth-hacker-data-analyst'>
       Growth Hacker / Data analyst - Titik Pintar
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/KGSTechnologyGroupInc/743999692257817-entry-level-data-analyst'>KGS Technology Group Inc Entry Level Data Analyst | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/KGSTechnologyGroupInc/743999692257817-entry-level-data-analyst'>KGS Technology Group Inc Entry Level Data Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -158,7 +158,7 @@ Berlin (published: 15.05.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">Noida</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/reachire/d61d6082-4fac-4bfa-a37f-ecc5d2574878'>reacHIRE - HR Coordinator/Data Analyst - Return-to-Work Program</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/reachire/d61d6082-4fac-4bfa-a37f-ecc5d2574878'>reacHIRE - HR Coordinator/Data Analyst - Return-to-Work Program</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -302,7 +302,7 @@ from Ironclad Technology Services would breach or violate any non-compete?...</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ghr.wd1.myworkdayjobs.com/Lateral-US/job/Charlotte/Compliace-and-Operational-Risk-Specialist_19049445'>Data Reporting Analyst/Compliance and Operational Risk Specialist</a></h5> 
+<h5><a href='https://ghr.wd1.myworkdayjobs.com/Lateral-US/job/Charlotte/Compliace-and-Operational-Risk-Specialist_19049445'>Data Reporting Analyst/Compliance and Operational Risk Specialist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 16, 2019 ... The role will require the ability to source data and reporting across a variety of 
 originations and servicing systems and data bases. The analyst will then be able
@@ -325,7 +325,7 @@ not subject you to adverse treatment). Our company values diversity.</p>
 <p><span class="badge badge-light">Munich Munich London</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://datatonic.workable.com/j/A5CF0608D6'>Datatonic - Jobs: BI Analyst - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://datatonic.workable.com/j/A5CF0608D6'>Datatonic - Jobs: BI Analyst - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom London</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -350,7 +350,7 @@ Ellaktor.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/INNOVIEW/743999692162776-business-and-data-analyst'>Innoview Business and Data Analyst | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/INNOVIEW/743999692162776-business-and-data-analyst'>Innoview Business and Data Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Budapest</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -424,13 +424,13 @@ at BAME Recruitment Limited.</p>
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://cobec.recruiterbox.com/jobs/fk03fji/'>
+<h5><a href='https://cobec.recruiterbox.com/jobs/fk03fji/'>
     Program/Data Analyst - FAA at Cobec Consulting
 </a></h5> 
 <p><span class="badge badge-light">Atlanta, Georgia</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<h5><a href='https://cobec.recruiterbox.com/jobs/fk03fjn/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://cobec.recruiterbox.com/jobs/fk03fjn/'>
     Program/Data Analyst - FAA at Cobec Consulting
 </a></h5> 
 <p><span class="badge badge-light">New York</span></p>
@@ -444,7 +444,7 @@ at BAME Recruitment Limited.</p>
 <p><span class="badge badge-light">Irvine, California</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<h5><a href='https://semios.workable.com/j/4B9CDAB53D'>Semios - Jobs: Data Analyst Co-op - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://semios.workable.com/j/4B9CDAB53D'>Semios - Jobs: Data Analyst Co-op - Apply online</a></h5> 
 <p><span class="badge badge-light">Vancouver, British Columbia Canada</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
